# Multithreading-Calculator

./: CMakeLists.txt  README.md
include/: Calculator.h  calculator.h
src/: calculator.cpp  main.cpp
